# backend

./: .dockerignore  .example.env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: main.py  settings.py
src/models/modules/: guild.py  user.py
src/routes/: auth.py  guild.py  user.py
src/utils/: cache.py  http_client.py
