[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["deadaf <gahlyanrohit18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^23.1.0"
fastapi = "^0.90.0"
tortoise-orm = "^0.19.3"
python-decouple = "^3.7"
uvicorn = "^0.20.0"
aiohttp = "^3.8.3"
fastapi-health = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=122
